MDEV-8799: Server crashes in btr_defragment_add_index, encryption.innodb-bad-key-change5 and alike fail in buildbot

Problem was unsafe access to NULL pointer. Added additional checks to avoid
access to NULL pointer.